--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y3J1Y2lhbC1yb2RlbnQtNS5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_kN0sX8YElZNuZ7MILm0qRS3rTSXisO7II7QXhpfna3
+
+DATABASE_URL=postgresql://neondb_owner:npg_BfoXVq7vZ6yT@ep-odd-silence-adeeu6yf-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
